# lfric_apps

./: .fortitude.toml  .gitignore  CONTRIBUTORS.md  README.md  dependencies.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ru_build-docs.yml  ru_deploy-docs.yml
applications/adjoint_tests/source/: adjoint_tests.f90
applications/gravity_wave/source/: gravity_wave.f90
applications/gungho_model/source/: gungho_model.f90
applications/jedi_lfric_tests/example_create_traj/: C224_create_traj_file.sh
applications/jedi_lfric_tests/source/: jedi_lfric_tests.f90
applications/lfric2lfric/source/: lfric2lfric.f90
applications/lfric_atm/: Makefile
applications/lfric_atm/metadata/: field_def_diags.xml
applications/lfric_atm/source/: lfric_atm.f90
applications/lfric_coupled/: Makefile
applications/lfric_coupled/source/: lfric_coupled.f90
applications/lfricinputs/: stylist.py
applications/linear_model/source/: linear_model.f90
applications/ngarch/: Makefile
applications/ngarch/example/: configuration.nml  iodef.xml
applications/ngarch/source/: ngarch.f90
applications/shallow_water/source/: shallow_water.f90
applications/solver/source/: solver.F90
documentation/: Makefile
documentation/source/: accessibility.rst  conf.py
interfaces/physics_schemes_interface/: stylist.py
rose-stem/: flow.cylc  rose-suite.conf
rose-stem/Jinja2Filters/: determine_source.py  get_precision.py
rose-stem/app/canned_test/: rose-app.conf
rose-stem/templates/: common_macros.cylc  default_task_definitions.cylc  default_task_definitions_lfric_coupled.cylc  parse_build_config.cylc  populate_task_definitions.cylc
science/physics_schemes/: stylist.py
science/socrates_interface/: Makefile
science/um_physics_interface/: Makefile
(+389 files in other folders)
